# qsummary

./: CMakeLists.txt  README.md  info_rh8_qt6.txt  main.cpp
appl/: chartview.cpp  chartview.hpp  derived_smry.cpp  derived_smry.hpp  mod_smry_appl.cpp  point_info.cpp  point_info.hpp  qsum_cmdf.cpp  qsum_cmdf.hpp  qsum_func_lib.cpp  qsum_func_lib.hpp  smry_appl.cpp  smry_appl.hpp  smry_series.cpp  smry_series.hpp  smry_xaxis.cpp  smry_xaxis.hpp  smry_yaxis.cpp  smry_yaxis.hpp  xaxis_ticks.cpp  xaxis_ticks.hpp
tests/: REF_DEFINE.DATA  qsum_test_utility.cpp  qsum_test_utility.hpp  test_cmdf_define.cpp  test_cmdf_input_charts.cpp  test_scale_yaxis.cpp  test_sep_folders.cpp  test_smry_appl.cpp  update_ref_define.cpp
tests/cmd_files/: test1a.txt  test1b.txt  test1c.txt  test1d.txt  test1e.txt  test1f.txt  test1g.txt  test1h.txt  test2a.txt  test2b.txt  test2c.txt  test3a.txt  test3b.txt  test3c.txt  test4a.txt  test4b.txt
tests/smry_files/: NORNE_ATW2013.ESMRY  NORNE_S1.ESMRY  NORNE_S2.ESMRY  SENS0.ESMRY  SENS0.SMSPEC  SENS0.UNSMRY  SENS1.ESMRY  SENS1.SMSPEC  SENS1.UNSMRY  SENS2.ESMRY  SENS2.UNSMRY  TEST_WTEST.DATA  TEST_WTEST.ESMRY
